syntax = "proto3";

package winleadplus;

// ===== WINLEADPLUS CONFIG =====

message WinLeadPlusConfig {
  string id = 1;
  string organisation_id = 2;
  string api_endpoint = 3;
  bool enabled = 4;
  int32 sync_interval_minutes = 5;
  optional string last_sync_at = 6;
  string created_at = 7;
  string updated_at = 8;
}

message CreateWinLeadPlusConfigRequest {
  string organisation_id = 1;
  string api_endpoint = 2;
  bool enabled = 3;
  int32 sync_interval_minutes = 4;
}

message UpdateWinLeadPlusConfigRequest {
  string id = 1;
  optional string api_endpoint = 2;
  optional bool enabled = 3;
  optional int32 sync_interval_minutes = 4;
}

message GetWinLeadPlusConfigRequest {
  string organisation_id = 1;
}

// ===== WINLEADPLUS MAPPING =====

message WinLeadPlusMapping {
  string id = 1;
  string organisation_id = 2;
  string winleadplus_prospect_id = 3;
  string crm_client_id = 4;
  repeated string crm_contrat_ids = 5;
  string last_synced_at = 6;
}

message CreateWinLeadPlusMappingRequest {
  string organisation_id = 1;
  string winleadplus_prospect_id = 2;
  string crm_client_id = 3;
  repeated string crm_contrat_ids = 4;
}

message UpdateWinLeadPlusMappingRequest {
  string id = 1;
  optional string crm_client_id = 2;
  repeated string crm_contrat_ids = 3;
}

message GetWinLeadPlusMappingRequest {
  string id = 1;
}

message ListWinLeadPlusMappingsRequest {
  string organisation_id = 1;
  optional string winleadplus_prospect_id = 2;
  optional string crm_client_id = 3;
}

message ListWinLeadPlusMappingsResponse {
  repeated WinLeadPlusMapping mappings = 1;
}

// ===== WINLEADPLUS SYNC LOG =====

message WinLeadPlusSyncLog {
  string id = 1;
  string organisation_id = 2;
  string started_at = 3;
  optional string finished_at = 4;
  string status = 5;
  int32 total_prospects = 6;
  int32 created = 7;
  int32 updated = 8;
  int32 skipped = 9;
  repeated string errors = 10;
}

message GetWinLeadPlusSyncLogRequest {
  string id = 1;
}

message ListWinLeadPlusSyncLogsRequest {
  string organisation_id = 1;
  optional int32 limit = 2;
}

message ListWinLeadPlusSyncLogsResponse {
  repeated WinLeadPlusSyncLog logs = 1;
}

// ===== SYNC REQUESTS/RESPONSES =====

message SyncProspectsRequest {
  string organisation_id = 1;
  bool dry_run = 2;
}

message SyncProspectsResponse {
  bool success = 1;
  WinLeadPlusSyncLog sync_log = 2;
}

message GetSyncStatusRequest {
  string organisation_id = 1;
}

message GetSyncStatusResponse {
  bool is_syncing = 1;
  optional string current_sync_id = 2;
  optional string last_sync_at = 3;
}

message TestConnectionRequest {
  string organisation_id = 1;
  string api_endpoint = 2;
}

message TestConnectionResponse {
  bool success = 1;
  string message = 2;
}

message Empty {}

// ===== WINLEADPLUS SYNC SERVICE =====

service WinLeadPlusSyncService {
  rpc SyncProspects(SyncProspectsRequest) returns (SyncProspectsResponse);
  rpc GetSyncStatus(GetSyncStatusRequest) returns (GetSyncStatusResponse);
  rpc GetSyncLogs(ListWinLeadPlusSyncLogsRequest) returns (ListWinLeadPlusSyncLogsResponse);
  rpc TestConnection(TestConnectionRequest) returns (TestConnectionResponse);
  rpc GetConfig(GetWinLeadPlusConfigRequest) returns (WinLeadPlusConfig);
  rpc SaveConfig(UpdateWinLeadPlusConfigRequest) returns (WinLeadPlusConfig);
}
